[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meet-prep"
version = "0.1.0"
description = "CLI tool to fetch Notion Daily Reports for meeting preparation"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.scripts]
meet-prep = "meet_prep:main"
